examples/tls-inspector/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 12345
static_resources:
  listeners:
  - name: listener_inbound
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 16000
    traffic_direction: INBOUND
    filter_chains:
      - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: AUTO
              stat_prefix: ingress_http
              route_config:
                name: ingress
                virtual_hosts:
                  - name: ingress
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                        direct_response:
                          status: 503
                          body:
                            inline_string: "{'message': 'FAILURE INJECTOIN!'}"
              http_filters:
                - name: envoy.filters.http.router

  clusters:
  - name: service-https-http2
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service-https-http2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service-https-http2
                port_value: 443
  - name: service-https-http1.1
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service-https-http1.1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service-https-http1.1
                port_value: 443
  - name: service-http
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service-http
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service-http
                port_value: 80
